--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Thu Dec 13 14:16:09 CET 2012
+#Wed Jan 02 14:57:57 CET 2013
 eclipse.preferences.version=1
 encoding//extra/pelicanconf.py=utf-8
 encoding//extra/publishconf.py=utf-8
+encoding/pelicanconf.py=utf-8
